Fix bug of page crashing often while navigating the table
- make certain only columns editable
- send updates only when the value has changed ignoring invisible changes

--- a/backend/src/bas_app/static/main.css
+++ b/backend/src/bas_app/static/main.css
@@ -71,7 +71,8 @@
 }
 
 .current-row {
-    background-color: #d6e4ea !important;
+    border-top: solid rgba(127, 255, 212, 0.3) !important;
+    border-bottom: solid rgba(127, 255, 212, 0.3) !important;
 }
 
 #homepage-ref, #job-listing-ref {
